removed goofy words

--- a/index.html
+++ b/index.html
@@ -25,15 +25,12 @@
              <p>I am</p>
              <h1>BENI</h1>
              <h3>Byeeee</h3>
-             <h6>Let me eat a hamburger then punch you in the face</h6>
+             <h6>THIS SITE'S DEVELOPING HAS BEEN FREEZED FOR A WHILE.</h6>
      
              <div class="row" id="row">
                  <a class="row1" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Discord Server</a>
                  <a class="row2" href="setup.html">My goofy setup</a>
              </div>
-           </div>
-           <div class="jog">
-            <p>© Pocsai és társai Bt.</p>
            </div>
      
         </div>
